--- a/Contactus.html
+++ b/Contactus.html
@@ -35,10 +35,10 @@
                   <p> <h1 style="justify-content: space-between;"> Postcode: 1015CC  </h1> </p>
                 </div class="Contactusmain1">
                 <div class="footer">
-                  <!-- Dit hieronder zorgt ervoor dat er in footer zit in de pagina. De div class zorgt ervoor dat er een zwarte achtergrond is en dat de tekst wit is! -->
-                  © 2024 Dickies-Donuts. Alle Rechten Voorbehouden.
-                  <br>
-                  Algemene Voorwaarden | Privacy & Cookies | Alle prijzen zijn incl. BTW                                                   
-              </div>
+                  © 2024 Dickies-Donuts. All Rights Reserved.
+                 <br>
+                 Terms of Service | Privacy & Cookies | All prices include VAT
+                                                                    
+                 </div>
   </body>
 </html>
