--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/images/Dickies icon.jpg" type="image">
   </head>
   <body style="background-image: url(/images/donutbackground3.0.jpg); background-position-y: 120px; background-repeat: no-repeat; ">
-    <!--Onderstaande ul in de navbar -->
+    <!--Onderstaande ul is de navbar -->
     <ul class="sticky">
       <li>
       <img src="/images/Dickies_logo.png" class="Logo">
@@ -59,33 +59,17 @@
       <br>
       <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and contains a blueberry filling. Now on sale! </p>
       <br>
-      <h1> <s class="deal"> €2.99 </s>
-        €2.00 </h1>
+      <h1> <s class="deal"> €2.99  </s>
+           €1.99 </h1>
     </div>
-    
+    <br>
+    <br>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <div class="footer">
-      © 2024 Dickies-Donuts. Alle Rechten Voorbehouden.
-      <br>
-      Algemene Voorwaarden | Privacy & Cookies | Alle prijzen zijn incl. BTW                                                   
-  </div>
+      © 2024 Dickies-Donuts. All Rights Reserved.
+     <br>
+     Terms of Service | Privacy & Cookies | All prices include VAT
+                                                        
+     </div>
   </body>
 </html>
