--- a/Shop.html
+++ b/Shop.html
@@ -102,12 +102,14 @@
       <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <p> donut</p>
     </div>
-    
+    <br>
+    <br>
 
     <div class="footer">
-      © 2024 Dickies-Donuts. Alle Rechten Voorbehouden.
-      <br>
-      Algemene Voorwaarden | Privacy & Cookies | Alle prijzen zijn incl. BTW                                                   
-  </div>
+      © 2024 Dickies-Donuts. All Rights Reserved.
+     <br>
+     Terms of Service | Privacy & Cookies | All prices include VAT
+                                                        
+     </div>
 </body>
 </html>
