--- a/Index.html
+++ b/Index.html
@@ -57,10 +57,9 @@
       <img src="/images/Confetti Donut.jpg" alt="donutimg">
       <p class="donuttext"> Confetti donut</p>
       <br>
-      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and contains a blueberry filling. Now on sale! </p>
+      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
       <br>
-      <h1> <s class="deal"> €2.99 </s>
-        €2.00 </h1>
+      <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
     </div>
     
 
