--- a/Shop.html
+++ b/Shop.html
@@ -22,87 +22,121 @@
     </div class="Contactusmain1">
     <div class="Product">
       <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
+      <h1> The Pink Fiary Donut </h1>
+      <br>
       <p> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p>
       <br>
     <h1> €2.99 </h1>
   </div>
     <div class="Product">
       <img src="/images/Brownie Donut.jpg" alt="donutpic">
+      <h1> The Brownie Donut </h1>
+      <br>
       <p> The Brownie Donut is a tasty chocolate donut for chocolate lovers. The donut contains chocolate spread filling and is topped with chocolate sprinkles.</p>
       <br>
       <h1> €2.99 </h1>
     </div>
     <div class="Product">
       <img src="/images/Gesuikerde donut.jpg" alt="donutpic">
+      <h1> The Sugared Donut </h1>
+      <br>
       <p> The Sugared Donut is a sweet and plain donut for the people who want something simple. The donut is topped with sugar and contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
     </div>
     <div class="Product">
       <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and contains a blueberry filling. Now on sale! </p>
+      <h1> The Confetti Donut </h1>
       <br>
-      <h1> <s class="deal"> €2.99 </s> €2.00 </h1>
+      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
+      <br>
+      <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
     </div>
     <div class="Product">
       <img src="/images/Cookie monster donutt.jpg" alt="donutpic">
+      <h1> The Cookie Monster Donut </h1>
+      <br>
       <p> The Cookie Monster Donut is a donut for the Cookie Monster fans out there! The donut is topped with sprinkles and a tasteful cookie it contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
     </div>
     <div class="Product">
       <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
       <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
     </div> 
     <div class="Product">
-      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
-      <p> donut</p>
+      <img src="/images/Banana donut.avif" alt="donutpic">
+      <h1> The Banana Split Donut </h1>
+      <br>
+      <p> The Banana Split Donut is a flavorous donut which contains no filling. It is topped with white flaky sprinkles. Now on sale! </p>
+      <br>
+      <h1> €2.99 </h1>     
     </div>
     <div class="Product">
-      <img src="/images/Brownie Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>  <div class="Product">
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>  <div class="Product">
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>  <div class="Product">
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>  
     <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>  
     <div class="Product">
-      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div> 
     <div class="Product">
-      <img src="/images/Brownie Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div> 
     <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Brownie Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Brownie Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div> 
 
     <div class="footer">
       © 2024 Dickies-Donuts. Alle Rechten Voorbehouden.
