--- a/Shop.html
+++ b/Shop.html
@@ -77,7 +77,7 @@
       <h1> €2.99 </h1>     
     </div>
     <div class="Product">
-      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <img src="/images/" alt="donutpic">
       <h1> The Spicy Donut </h1>
       <br>
       <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
@@ -128,37 +128,7 @@
       <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
-    </div> 
-    <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Brownie Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Brownie Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <p> donut</p>
-    </div>
-    <br>
-    <br>
+  
 
     <div class="footer">
       © 2024 Dickies-Donuts. All Rights Reserved.
