--- a/Contactus.html
+++ b/Contactus.html
@@ -1,5 +1,6 @@
 <html> 
 <head>
+  <!-- onderstuk is de standard code in de head wat op iedere pagina staat wat zorgt er voor de het css bestand gelinkt is en dat de titel en icon goed zijn-->
   <link rel="stylesheet" href="Styles.css">
   <title> Contact Us</title>
   <link rel="icon" href="/images/Dickies icon.jpg" type="image">
