--- a/Shop.html
+++ b/Shop.html
@@ -92,7 +92,7 @@
       <br>
       <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
     </div>  <div class="Product">
-      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <img src="/images/Blueberry donut.avif" alt="donutpic">
       <h1> The Blueberry Donut </h1>
       <br>
       <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
