--- a/Productpage.html
+++ b/Productpage.html
@@ -7,6 +7,7 @@
   
 </head>
   <body>
+    <!--onderstaande ul is de navbar -->
     <ul class="sticky">
       <li>
       <img src="/images/Dickies_logo.png" class="Logo">
@@ -17,21 +18,22 @@
         <a href="Index.html"> Home </a>
       </li>
     </ul>
-
+ <!--onderstaande div is de tekst naast de donut-->
     <div class="Productpagedonuttext">
         <p>Pink Fairy Donut </p>
         <p style="font-size: 25px; font-weight: 100;"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus sequi, inventore velit repellat eius laboriosam sunt illum necessitatibus, labore ab doloribus a voluptate amet neque deserunt quo omnis voluptatum maiores!</p>
         <br>
-        <p style> €2.99 </p>
+        <p> €2.99 </p>
     </div>
+ <!--onderstaande div is de foto zelf-->
 
     <div class="Productpagedonut">
-        <img src="/images/Pink fairy Donut.jpg" alt="donutimg" style="border: black solid; width: 40%;">
+        <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
     </div>
     
 
 
-
+<!-- onderstaande div is de footer-->
  <div class="footer">
  © 2024 Dickies-Donuts. All Rights Reserved.
 <br>
