--- a/Shop.html
+++ b/Shop.html
@@ -129,7 +129,7 @@
       <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
-  
+    </div>
 
     <div class="footer">
       © 2024 Dickies-Donuts. All Rights Reserved.
