--- a/Shop.html
+++ b/Shop.html
@@ -95,7 +95,7 @@
       <img src="/images/Blueberry donut.avif" alt="donutpic">
       <h1> The Blueberry Donut </h1>
       <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <p> The Blueberry Donut is a tasty donut for the blueberry lovers. It contains a blueberry filling and is topped with blueberry glazing and sprinkles </p>
       <br>
       <h1> €2.99 </h1>
     </div>  <div class="Product">
