--- a/Productpage.html
+++ b/Productpage.html
@@ -21,7 +21,7 @@
  <!--onderstaande div is de tekst naast de donut-->
     <div class="Productpagedonuttext">
         <p>Pink Fairy Donut </p>
-        <p style="font-size: 25px; font-weight: 100;"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus sequi, inventore velit repellat eius laboriosam sunt illum necessitatibus, labore ab doloribus a voluptate amet neque deserunt quo omnis voluptatum maiores!</p>
+        <p id="Productpagedescription"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus sequi, inventore velit repellat eius laboriosam sunt illum necessitatibus, labore ab doloribus a voluptate amet neque deserunt quo omnis voluptatum maiores!</p>
         <br>
         <p> €2.99 </p>
     </div>
