--- a/Shop.html
+++ b/Shop.html
@@ -62,14 +62,6 @@
       <h1> €2.99 </h1>
     </div>
     <div class="Product">
-      <img src="/images/Spicy Donut.jpg" alt="donutpic">
-      <h1> The Spicy Donut </h1>
-      <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food. The sprinkles on top contain as much scolville as the Carolina Reaper! It contains no filling. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div> 
-    <div class="Product">
       <img src="/images/Banana donut.avif" alt="donutpic">
       <h1> The Banana Split Donut </h1>
       <br>
@@ -84,52 +76,76 @@
       <p> The Apple Cider Donut is a donut for all the cinnamon lovers out there! The donut is topped with cinnamon sugar and caramel. It doesnt contain a filling. </p>
       <br>
       <h1> €2.99 </h1>
-    </div>  <div class="Product">
+    </div>  
+    <div class="Product">
+      <img src="/images/Blueberry donut.avif" alt="donutpic">
+      <h1> The Blueberry Donut </h1>
+      <br>
+      <p> The Blueberry Donut is a tasty donut for the blueberry lovers. It contains a blueberry filling and is topped with blueberry glazing and sprinkles. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div> 
+    <div class="Product">
+      <img src="/images/Koningsdag donut.jpg" alt="donutpic">
+      <h1> The Kingsday Donut </h1>
+      <br>
+      <p> The Kingsday Donut is a donut for all the Dutchies out there. The donut contains orange glazing for our national colors on our king's birthday. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>  
+    <div class="Product">
+      <img src="/images/" alt="donutpic">
+      <h1> The Red Velvet Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>  
+    <div class="Product">
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>  
+    <div class="Product">
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>  
+
+
+
+
+
+    <div class="Product">
+      <img src="/images/Spicy Donut.jpg" alt="donutpic">
+      <h1> The Spicy Donut </h1>
+      <br>
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <br>
+      <h1> €2.99 </h1>
+    </div>  
+    <div class="Product">
       <img src="/images/Bacon donut.png" alt="donutpic">
       <h1> The Bacon DOnut </h1>
       <br>
       <p> The Bacon Donut is a rather weird donut flavour but dont judge a book by its cover! It has a great taste and the bacon on top is always crispy. </p>
       <br>
       <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
-    </div>  <div class="Product">
-      <img src="/images/Blueberry donut.avif" alt="donutpic">
-      <h1> The Blueberry Donut </h1>
-      <br>
-      <p> The Blueberry Donut is a tasty donut for the blueberry lovers. It contains a blueberry filling and is topped with blueberry glazing and sprinkles </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>  <div class="Product">
-      <img src="/images/Spicy Donut.jpg" alt="donutpic">
-      <h1> The Spicy Donut </h1>
-      <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
-      <br>
-      <h1> €2.99 </h1>
     </div>  
     <div class="Product">
       <img src="/images/Spicy Donut.jpg" alt="donutpic">
       <h1> The Spicy Donut </h1>
       <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>  
-    <div class="Product">
-      <img src="/images/Spicy Donut.jpg" alt="donutpic">
-      <h1> The Spicy Donut </h1>
-      <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <p> The Spicy Donut is a donut for the people who love spicy food. The sprinkles on top contain as much scolville as the Carolina Reaper! It contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
     </div> 
-    <div class="Product">
-      <img src="/images/Spicy Donut.jpg" alt="donutpic">
-      <h1> The Spicy Donut </h1>
-      <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>
 
     <div class="footer">
       © 2024 Dickies-Donuts. All Rights Reserved.
