--- a/Shop.html
+++ b/Shop.html
@@ -49,7 +49,9 @@
       <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <h1> The Confetti Donut </h1>
       <br>
-      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
+      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped 
+        <br>
+        with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
       <br>
       <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
     </div>
@@ -65,7 +67,9 @@
       <img src="/images/Banana donut.avif" alt="donutpic">
       <h1> The Banana Split Donut </h1>
       <br>
-      <p> The Banana Split Donut is a flavorous donut which contains no filling. It is topped with white flaky sprinkles. Now on sale! </p>
+      <p> The Banana Split Donut is a flavorous donut for people who like banana's. 
+        <br>
+        The donut contains no filling and is topped with white flaky sprinkles.  </p>
       <br>
       <h1> €2.99 </h1>     
     </div>
@@ -73,7 +77,9 @@
       <img src="/images/Apple cider donut.jpg" alt="donutpic">
       <h1> The Apple Cider Donut </h1>
       <br>
-      <p> The Apple Cider Donut is a donut for all the cinnamon lovers out there! The donut is topped with cinnamon sugar and caramel. It doesnt contain a filling. </p>
+      <p> The Apple Cider Donut is a donut for all the cinnamon lovers out there! 
+        <br>
+        The donut is topped with cinnamon sugar and contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
     </div>  
@@ -94,16 +100,16 @@
       <h1> €2.99 </h1>
     </div>  
     <div class="Product">
-      <img src="/images/" alt="donutpic">
-      <h1> The Red Velvet Donut </h1>
+      <img src="/images/Lemon donut.jpg" alt="donutpic">
+      <h1> The Lemon Donut </h1>
       <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <p> The Lemon Donut is a donut for people who love sour food. The donut is topped with a yellow glazing which is sour and contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
     </div>  
     <div class="Product">
       <img src="/images/Spicy Donut.jpg" alt="donutpic">
-      <h1> The Spicy Donut </h1>
+      <h1> The Matcha Donut </h1>
       <br>
       <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
       <br>
@@ -139,10 +145,10 @@
       <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
     </div>  
     <div class="Product">
-      <img src="/images/Spicy Donut.jpg" alt="donutpic">
-      <h1> The Spicy Donut </h1>
+      <img src="/images/Green tea Matcha donut.avif" alt="donutpic">
+      <h1> The Matcha Donut </h1>
       <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food. The sprinkles on top contain as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <p> The Matcha Donut is a donut for people who love green tea. The donut is topped with matcha glazing and sprinkles. It contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
     </div> 
