--- a/Shop.html
+++ b/Shop.html
@@ -123,11 +123,11 @@
       <br>
       <h1> €2.99 </h1>
     </div>  
-
-
-
-
-
+    <div class="unusualdonuts">
+      <p>
+        Unusual Donuts
+      </p>
+    </div>
     <div class="Product">
       <img src="/images/Spicy Donut.jpg" alt="donutpic">
       <h1> The Spicy Donut </h1>
@@ -138,7 +138,7 @@
     </div>  
     <div class="Product">
       <img src="/images/Bacon donut.png" alt="donutpic">
-      <h1> The Bacon DOnut </h1>
+      <h1> The Bacon Donut </h1>
       <br>
       <p> The Bacon Donut is a rather weird donut flavour but dont judge a book by its cover! It has a great taste and the bacon on top is always crispy. </p>
       <br>
