--- a/Productpage.html
+++ b/Productpage.html
@@ -21,7 +21,7 @@
  <!--onderstaande div is de tekst naast de donut-->
     <div class="Productpagedonuttext">
         <p>Pink Fairy Donut </p>
-        <p id="Productpagedescription"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus sequi, inventore velit repellat eius laboriosam sunt illum necessitatibus, labore ab doloribus a voluptate amet neque deserunt quo omnis voluptatum maiores!</p>
+        <p id="Productpagedescription"> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
     </div>
