--- a/Shop.html
+++ b/Shop.html
@@ -8,6 +8,7 @@
 
     </head>
 <body>
+  <!--Onderstaande ul in de navbar -->
     <ul class="sticky">
       <li>
       <img src="/images/Dickies_logo.png" class="Logo">
@@ -18,16 +19,18 @@
         <a href="Index.html"> Home </a>
       </li>
     </ul>
+    <!-- Kop van de pagina -->
 <div class="Contactusmain1"> 
     <h1 class="header"> Shop Now </h1>
-    </div class="Contactusmain1">
-    <div class="Product">
-      <img src="/images/Pink fairy Donut.jpg" alt="donutpic">
-      <h1> The Pink Fiary Donut </h1>
+    </div>
+          <!-- De code van 28 t/m 129 zijn allemaal identiek aan elkaar, dus ik alleen bij de eerste donut een uitgebreide verklaring -->
+    <div class="Product"> 
+      <img src="/images/Pink fairy Donut.jpg" alt="donutpic"> <!-- Hiermee verwijzen we naar de afbeelding van de donut -->
+      <h1> The Pink Fiary Donut </h1> <!-- Is de naam van de donut -->
+      <br> 
+      <p> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p> <!-- Beschrijving van de donut -->
       <br>
-      <p> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p>
-      <br>
-    <h1> €2.99 </h1>
+    <h1> €2.99 </h1> <!-- Prijs van de donut -->
   </div>
     <div class="Product">
       <img src="/images/Brownie Donut.jpg" alt="donutpic">
@@ -53,7 +56,7 @@
         <br>
         with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
       <br>
-      <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
+      <h1> <s class="deal"> €2.99 </s> €1.99 </h1> <!-- We gebruiken <s> </s> om aan te geven dat iets doorgestreept moet zijn net zoals bij een deal op een website -->
     </div>
     <div class="Product">
       <img src="/images/Cookie monster donutt.jpg" alt="donutpic">
@@ -123,11 +126,13 @@
       <br>
       <h1> €2.99 </h1>
     </div>  
-    <div class="unusualdonuts">
+<!-- Onderstaande Div is de Unusual Donuts text. -->
+    <div id="unusualdonuts">
       <p>
         Unusual Donuts
       </p>
     </div>
+<!-- Dit is een aparte sectie voor de aparte donuts we maken hier nog steeds gebruik van een <div> </div> om te groeperen en van <img src> regel 135 t/m 159 is identitiek aan elkaar -->
     <div class="Product">
       <img src="/images/Spicy Donut.jpg" alt="donutpic">
       <h1> The Spicy Donut </h1>
@@ -142,7 +147,7 @@
       <br>
       <p> The Bacon Donut is a rather weird donut flavour but dont judge a book by its cover! It has a great taste and the bacon on top is always crispy. </p>
       <br>
-      <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
+      <h1> <s class="deal"> €2.99 </s> €1.99 </h1> <!-- We gebruiken <s> </s> om aan te geven dat iets doorgestreept moet zijn net zoals bij een deal op een website -->
     </div>  
     <div class="Product">
       <img src="/images/Green tea Matcha donut.avif" alt="donutpic">
@@ -152,7 +157,7 @@
       <br>
       <h1> €2.99 </h1>
     </div> 
-
+<!-- onderstaande div is de footer-->
     <div class="footer">
       © 2024 Dickies-Donuts. All Rights Reserved.
      <br>
