--- a/Shop.html
+++ b/Shop.html
@@ -111,18 +111,18 @@
       <h1> €2.99 </h1>
     </div>  
     <div class="Product">
-      <img src="/images/Spicy Donut.jpg" alt="donutpic">
-      <h1> The Matcha Donut </h1>
+      <img src="/images/Oreo Donut.jpg" alt="donutpic">
+      <h1> The Oreo Donut </h1>
       <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <p> The Oreo Donut is for the Oreo lovers out there. The donut is topped with oreo crumbles and white chocolate glazing.   </p>
       <br>
       <h1> €2.99 </h1>
     </div>  
     <div class="Product">
-      <img src="/images/Spicy Donut.jpg" alt="donutpic">
-      <h1> The Spicy Donut </h1>
+      <img src="/images/Jelly donut.jpg" alt="donutpic">
+      <h1> The Jelly Donut </h1>
       <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
+      <p> The Jelly Donut is a classic donut around the world. The donut contains strawberry jelly filling and is topped with some powdered sugar. </p>
       <br>
       <h1> €2.99 </h1>
     </div>  
