--- a/Shop.html
+++ b/Shop.html
@@ -127,7 +127,7 @@
       <h1> €2.99 </h1>
     </div>  
 <!-- Onderstaande Div is de Unusual Donuts text. -->
-    <div id="unusualdonuts">
+    <div class="unusualdonuts">
       <p>
         Unusual Donuts
       </p>
