--- a/Shop.html
+++ b/Shop.html
@@ -23,15 +23,16 @@
 <div class="Contactusmain1"> 
     <h1 class="header"> Shop Now </h1>
     </div>
-          <!-- De code van 28 t/m 129 zijn allemaal identiek aan elkaar, dus ik alleen bij de eerste donut een uitgebreide verklaring -->
+          <!-- De code van 27 t/m 139 zijn allemaal identiek aan elkaar, dus doe ik alleen bij de eerste donut een uitgebreide verklaring van de code -->
     <div class="Product"> 
       <img src="/images/Pink fairy Donut.jpg" alt="donutpic"> <!-- Hiermee verwijzen we naar de afbeelding van de donut -->
       <h1> The Pink Fiary Donut </h1> <!-- Is de naam van de donut -->
       <br> 
       <p> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p> <!-- Beschrijving van de donut -->
-      <br>
+      <br> 
     <h1> €2.99 </h1> <!-- Prijs van de donut -->
   </div>
+
     <div class="Product">
       <img src="/images/Brownie Donut.jpg" alt="donutpic">
       <h1> The Brownie Donut </h1>
@@ -40,6 +41,7 @@
       <br>
       <h1> €2.99 </h1>
     </div>
+
     <div class="Product">
       <img src="/images/Gesuikerde donut.jpg" alt="donutpic">
       <h1> The Sugared Donut </h1>
@@ -48,16 +50,18 @@
       <br>
       <h1> €2.99 </h1>
     </div>
+
     <div class="Product">
       <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <h1> The Confetti Donut </h1>
       <br>
       <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped 
-        <br>
+        <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
         with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
       <br>
       <h1> <s class="deal"> €2.99 </s> €1.99 </h1> <!-- We gebruiken <s> </s> om aan te geven dat iets doorgestreept moet zijn net zoals bij een deal op een website -->
     </div>
+
     <div class="Product">
       <img src="/images/Cookie monster donutt.jpg" alt="donutpic">
       <h1> The Cookie Monster Donut </h1>
@@ -66,26 +70,29 @@
       <br>
       <h1> €2.99 </h1>
     </div>
+
     <div class="Product">
       <img src="/images/Banana donut.avif" alt="donutpic">
       <h1> The Banana Split Donut </h1>
       <br>
       <p> The Banana Split Donut is a flavorous donut for people who like banana's. 
-        <br>
+        <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
         The donut contains no filling and is topped with white flaky sprinkles.  </p>
       <br>
       <h1> €2.99 </h1>     
     </div>
+
     <div class="Product">
       <img src="/images/Apple cider donut.jpg" alt="donutpic">
       <h1> The Apple Cider Donut </h1>
       <br>
       <p> The Apple Cider Donut is a donut for all the cinnamon lovers out there! 
-        <br>
+        <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
         The donut is topped with cinnamon sugar and contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
     </div>  
+
     <div class="Product">
       <img src="/images/Blueberry donut.avif" alt="donutpic">
       <h1> The Blueberry Donut </h1>
@@ -94,6 +101,7 @@
       <br>
       <h1> €2.99 </h1>
     </div> 
+
     <div class="Product">
       <img src="/images/Koningsdag donut.jpg" alt="donutpic">
       <h1> The Kingsday Donut </h1>
@@ -102,6 +110,7 @@
       <br>
       <h1> €2.99 </h1>
     </div>  
+
     <div class="Product">
       <img src="/images/Lemon donut.jpg" alt="donutpic">
       <h1> The Lemon Donut </h1>
@@ -110,14 +119,16 @@
       <br>
       <h1> €2.99 </h1>
     </div>  
+
     <div class="Product">
       <img src="/images/Oreo Donut.jpg" alt="donutpic">
       <h1> The Oreo Donut </h1>
       <br>
-      <p> The Oreo Donut is for the Oreo lovers out there. The donut is topped with oreo crumbles and white chocolate glazing.   </p>
+      <p> The Oreo Donut is for the Oreo lovers out there. The donut is topped with oreo crumbles and white chocolate glazing. </p>
       <br>
       <h1> €2.99 </h1>
     </div>  
+
     <div class="Product">
       <img src="/images/Jelly donut.jpg" alt="donutpic">
       <h1> The Jelly Donut </h1>
@@ -132,15 +143,16 @@
         Unusual Donuts
       </p>
     </div>
-<!-- Dit is een aparte sectie voor de aparte donuts we maken hier nog steeds gebruik van een <div> </div> om te groeperen en van <img src> regel 135 t/m 159 is identitiek aan elkaar -->
-    <div class="Product">
-      <img src="/images/Spicy Donut.jpg" alt="donutpic">
-      <h1> The Spicy Donut </h1>
+<!-- Dit is een aparte sectie voor de "unusual" donuts. Regel 135 t/m 159 is identitiek aan elkaar, dus leg ik de eerste donut alleen uitgebreid uit. -->
+    <div class="Product"> <!-- om te groeperen -->
+      <img src="/images/Spicy Donut.jpg" alt="donutpic"> <!-- De afbeelding van de donut -->
+      <h1> The Spicy Donut </h1> <!-- Naam van de donut -->
+      <br> 
+      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p> <!-- Beschrijving van de donu -->
       <br>
-      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p>
-      <br>
-      <h1> €2.99 </h1>
+      <h1> €2.99 </h1> <!-- Prijs van de donut -->
     </div>  
+
     <div class="Product">
       <img src="/images/Bacon donut.png" alt="donutpic">
       <h1> The Bacon Donut </h1>
@@ -149,6 +161,7 @@
       <br>
       <h1> <s class="deal"> €2.99 </s> €1.99 </h1> <!-- We gebruiken <s> </s> om aan te geven dat iets doorgestreept moet zijn net zoals bij een deal op een website -->
     </div>  
+
     <div class="Product">
       <img src="/images/Green tea Matcha donut.avif" alt="donutpic">
       <h1> The Matcha Donut </h1>
